[tool.poetry]
name = "gantty"
version = "0.2.0"
description = "Gantt diagram generator"
authors = ["Romolo Politi <romolo.politi@inaf.it>"]
license = "GNU GPL ver. 3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10 , <3.14"
rich-click = "^1.8.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
